winner modal window appears now when player has won the game
