# server/src/main/java/com/demo/magic/server/MagicNotEnoughManaExceptionHandler.java
@@ -2,7 +2,8 @@ package com.demo.magic.server;
 
 
 import com.demo.magic.game.GameNotEnoughManaException;
-import com.demo.magic.server.model.BadRequestBean;
+import com.demo.magic.server.model.ErrorBean;
+import com.demo.magic.server.model.ErrorBeanErrorCode;
 import io.micronaut.context.annotation.Requires;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
@@ -10,11 +11,11 @@ import io.micronaut.http.server.exceptions.ExceptionHandler;
 import jakarta.inject.Singleton;
 
 @Singleton
-@Requires(classes = {GameNotEnoughManaException.class})
-public class MagicNotEnoughManaExceptionHandler implements ExceptionHandler<GameNotEnoughManaException, HttpResponse<BadRequestBean>> {
+@Requires(classes = {ErrorBean.class})
+public class MagicNotEnoughManaExceptionHandler implements ExceptionHandler<GameNotEnoughManaException, HttpResponse<ErrorBean>> {
   @Override
-  public HttpResponse<BadRequestBean> handle(HttpRequest request, GameNotEnoughManaException exception) {
-    BadRequestBean badRequestBean = new BadRequestBean(exception.getMessage());
+  public HttpResponse<ErrorBean> handle(HttpRequest request, GameNotEnoughManaException exception) {
+    ErrorBean badRequestBean = new ErrorBean(ErrorBeanErrorCode.BAD_PARAMETER, exception.getMessage());
     return HttpResponse.badRequest(badRequestBean);
   }
 }
