# server/src/main/java/com/demo/magic/server/MagicWinnerExceptionHandler.java
@@ -3,6 +3,7 @@ package com.demo.magic.server;
 
 import com.demo.magic.game.GameWinnerException;
 import com.demo.magic.server.model.ErrorBean;
+import com.demo.magic.server.model.ErrorBeanErrorCode;
 import io.micronaut.context.annotation.Requires;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
@@ -14,7 +15,7 @@ import jakarta.inject.Singleton;
 public class MagicWinnerExceptionHandler implements ExceptionHandler<GameWinnerException, HttpResponse<ErrorBean>> {
   @Override
   public HttpResponse<ErrorBean> handle(HttpRequest request, GameWinnerException exception) {
-    ErrorBean errorBean = new ErrorBean(exception.getMessage());
+    ErrorBean errorBean = new ErrorBean(ErrorBeanErrorCode.GAME_OVER, exception.getMessage());
     return HttpResponse.serverError(errorBean);
   }
 }
